# tempo-embeddings

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prospector.yml  Architecture.drawio  CITATION.cff  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  data.ndjson  design.md  geocoder.py  grid.json  map_places.py  ner_script.py  next_steps.md  project_setup.md  pyproject.toml  semantics_of_sustainability.yml  setup.cfg  sonar-project.properties  tempo-embeddings (WIP).drawio  workflow.drawio
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  release.yml  ruff.yaml  sonarcloud.yml
docs/: Architecture.drawio  Makefile  architecture.rst  conf.py  index.rst  make.bat  workflow.drawio  workflow.rst
notebooks/: 1_compute_embeddings_nl.ipynb  1_compute_embeddings_weaviate_nl.ipynb  1b_compute_custom_embeddings_nl.ipynb  1b_compute_embeddings_weaviate_nl.ipynb  2_analyze_time_weaviate_nl.ipynb  2_visualize_nl.ipynb  3_analyze_time_nl.ipynb  3_analyze_time_weaviate_nl.ipynb  anp.ipynb  expand_seed_terms.ipynb  sustainability-filter-w2v-expanded.txt  sustainability-filter-words-all.txt  sustainability-filter-words.txt  term_frequency.ipynb  vector_db_stats.ipynb  visualize.ipynb  visualize_nl.ipynb
notebooks/example_cases/: duurzaam_semantic_shifts.ipynb
notebooks/expand_seed_terms/: expand_seed_terms.ipynb  sustainability-filter-w2v-expanded.csv
notebooks/seed_terms/: expand_seed_terms.ipynb  sustainability-filter-words-all.txt
research_cloud/: environment.yml  semantics_of_sustainability.yml
scripts/: build_local_cache.py  build_sos_wv_database.py  copy_weaviate_db.py  export_database.py  extract_places.py  import_database.py  map_places.py
tempo_embeddings/: __init__.py  my_module.py  settings.py
tempo_embeddings/analysis/: analyser.py
tempo_embeddings/data/: corpora.json  delpher.json  doc_frequency_cache.db  heremans-words.txt  hutagalung-words.txt  potjer-words.txt  pretnar-words.txt  reiding-words.txt  stopwords-filter-nl.txt  suicide-words.txt  sustainability-filter-words-all.txt
tempo_embeddings/embeddings/: __init__.py  chroma_database.py  model.py  vector_database.py  weaviate_database.py
tempo_embeddings/io/: corpus_reader.py  geocoder.py  util.py
tempo_embeddings/text/: abstractcorpus.py  cluster.py  corpus.py  highlighting.py  keyword_extractor.py  passage.py  segmenter.py  subcorpus.py  types.py  util.py  year_span.py
tempo_embeddings/visualization/: bokeh.py  clusters.py  datamapplot.py  jscatter.py  plotly.py  util.py  visualizer.py  wizmap.py
tests/: conftest.py  test_corpus.py  test_geocoder.py  test_my_module.py  test_pasage.py
tests/embeddings/: test_model.py
tests/integration/embeddings/: test_model.py
tests/text/: test_corpus.py
tests/unit/embeddings/: test_model.py  test_vectordb.py  test_weaviate_database.py
tests/unit/io/: test_corpus_reader.py  test_util.py
tests/unit/text/: test_corpus.py  test_highlighting.py  test_keyword_extractor.py  test_passage.py  test_segmenter.py  test_subcorpus.py  test_util.py  test_year_span.py
tests/unit/visualization/: test_bokeh.py  test_jscatter.py
weaviate/: docker-compose.yml
