[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pytest_env]
PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION = "python"

[tool.pylint."MESSAGES CONTROL"]
disable = "django-not-available"

[tool.coverage.run]
branch = true
source = ["tempo_embeddings"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""

[tool.pyright]
exclude = [ "**/*.ipynb", "**/*.ipynb*" ]
ignore = [ "**/*.ipynb", "**/*.ipynb*" ]