# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Carsten Schnober
author_email = c.schnober@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = A library for analysing (temporal) word embeddings.
keywords =
    embeddings
    visualization
long_description = file: README.md
long_description_content_type = text/markdown
name = tempo_embeddings
project_urls =
    Bug Tracker = git@github.com:Semantics-of-Sustainability/tempo-embeddings/issues
url = git@github.com:Semantics-of-Sustainability/tempo-embeddings
version = 0.0.1

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    accelerate~=0.22.0
    seaborn~=0.13.0
    transformers~=4.32.1
    torch~=2.0.1
    torchvision>=0.15.2
    torchaudio>=2.0.2
    umap-learn~=0.5.4
    wizmap~=0.1.2
    matplotlib~=3.7.2   # Explicit version set for Windows build    
    sacremoses~=0.0.53  # Required for XLM models
    scikit-learn~=1.3.0
    # Required for UMAP plotting:
    pandas
    datashader
    bokeh~=2.4.1
    holoviews
    dash~=2.11.1

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = tempo_embeddings, tempo_embeddings.*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = tempo_embeddings
src_paths = tempo_embeddings,tests
line_length = 120

