# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Carsten Schnober
author_email = c.schnober@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = A library for analysing (temporal) word embeddings.
keywords =
    embeddings
    visualization
long_description = file: README.md
long_description_content_type = text/markdown
name = tempo_embeddings
project_urls =
    Bug Tracker = git@github.com:Semantics-of-Sustainability/tempo-embeddings/issues
url = git@github.com:Semantics-of-Sustainability/tempo-embeddings
version = 0.0.1

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    accelerate~=0.22.0
    seaborn~=0.13.0
    transformers~=4.39.0
    torch~=2.4.0
    umap-learn~=0.5.4
    wizmap~=0.1.2
    matplotlib~=3.7.2   # Explicit version set for Windows build
    sacremoses~=0.0.53  # Required for XLM models
    scikit-learn~=1.3.0
    sentence_splitter~=1.4.0
    stanza~=1.7.0
    chromadb~=0.4.22
    weaviate-client~=4.6.5
    wtpsplit~=2.0.5
    pydantic~=2.8.2
    # Required for UMAP plotting:
    pandas
    datashader
    bokeh~=3.3.2
    holoviews
    dash~=2.11.1

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    pytest
    pytest-env
    pytest-cov
    pytest-mock
    ruff
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = tempo_embeddings, tempo_embeddings.*
