# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Carsten Schnober
author_email = c.schnober@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = A library for analysing (temporal) word embeddings.
keywords =
    embeddings
    visualization
long_description = file: README.md
long_description_content_type = text/markdown
name = tempo_embeddings
project_urls =
    Bug Tracker = git@github.com:Semantics-of-Sustainability/tempo-embeddings/issues
url = git@github.com:Semantics-of-Sustainability/tempo-embeddings
version = 0.0.1

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    accelerate~=0.22.0
    chromadb~=0.5.18
    jupyter-scatter~=0.19.0
    kneed~=0.8.5
    python-dateutil~=2.9.0.post0
    sacremoses~=0.0.53  # Required for XLM models
    scikit-learn~=1.5.2
    seaborn~=0.13.0
    sentence_splitter~=1.4.0
    stanza~=1.7.0
    torch>=2.2.2
    transformers~=4.39.0
    umap-learn~=0.5.4
    weaviate-client~=4.6.5
    wizmap~=0.1.2
    wtpsplit~=2.0.5
    # Wtpsplit does not work with huggingface-hub 0.26 (https://github.com/segment-any-text/wtpsplit/issues/135)
    huggingface-hub~=0.25.0
    pydantic~=2.8.2
    # Required for UMAP plotting:
    bokeh~=3.3.2
    dash~=2.11.1
    datashader
    holoviews
    pandas
    # Dependencies for NER pipeline and time space heat map:
    folium~=0.18.0
    geopy~=2.4.1
    spacy~=3.8.2

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    pre-commit
    pytest
    pytest-env
    pytest-cov
    pytest-mock
    ruff>=0.6.1
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = tempo_embeddings, tempo_embeddings.*

[options.package_data]
tempo_embeddings =
    data/*
